--- a/css/general.css
+++ b/css/general.css
@@ -41,3 +41,76 @@
     margin-left: 5px;
   }
 }
+
+/* Gallary */
+.gallary {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 300px);
+  gap: 20px;
+  background-color: #000029;
+}
+
+.gallary img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  transition: .3s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.gallary img:hover {
+  filter: brightness(50%);
+  box-shadow: 0 0 10px 10px #8491ff;
+}
+
+.gallary img:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.gallary img:nth-child(2) {
+  grid-column: 2/4;
+  grid-row: 1/2;
+}
+
+.gallary img:nth-child(3) {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+
+.gallary img:nth-child(4) {
+  grid-column: 1/4;
+  grid-row: 2/3;
+}
+
+.gallary img:nth-child(5) {
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+
+.gallary img:nth-child(6) {
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+
+.gallary img:nth-child(7) {
+  grid-column: 3/5;
+  grid-row: 3/4;
+}
+
+.gallary img:nth-child(8) {
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+
+.gallary img:nth-child(9) {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+
+.gallary img:nth-child(10) {
+  grid-column: 3/5;
+  grid-row: 4/5;
+}
