--- a/css/general.css
+++ b/css/general.css
@@ -49,68 +49,199 @@
   grid-template-rows: repeat(4, 300px);
   gap: 20px;
   background-color: #000029;
+  padding: 0 30px 30px;
 }
 
 .gallary img {
   width: 100%;
   height: 300px;
   object-fit: cover;
-  transition: .3s;
+  transition: 0.5s;
   cursor: pointer;
   border-radius: 10px;
+  box-shadow: 0 0 10px #8491ff;
 }
 
 .gallary img:hover {
   filter: brightness(50%);
+  border-radius: 30px;
   box-shadow: 0 0 10px 10px #8491ff;
 }
 
-.gallary img:nth-child(1) {
+.gallary a:nth-child(1) {
   grid-column: 1/2;
   grid-row: 1/2;
 }
 
-.gallary img:nth-child(2) {
+.gallary a:nth-child(2) {
   grid-column: 2/4;
   grid-row: 1/2;
 }
 
-.gallary img:nth-child(3) {
+.gallary a:nth-child(3) {
   grid-column: 4/5;
   grid-row: 1/2;
 }
 
-.gallary img:nth-child(4) {
+.gallary a:nth-child(4) {
   grid-column: 1/4;
   grid-row: 2/3;
 }
 
-.gallary img:nth-child(5) {
+.gallary a:nth-child(5) {
   grid-column: 4/5;
   grid-row: 2/3;
 }
 
-.gallary img:nth-child(6) {
+.gallary a:nth-child(6) {
   grid-column: 1/3;
   grid-row: 3/4;
 }
 
-.gallary img:nth-child(7) {
+.gallary a:nth-child(7) {
   grid-column: 3/5;
   grid-row: 3/4;
 }
 
-.gallary img:nth-child(8) {
+.gallary a:nth-child(8) {
   grid-column: 1/2;
   grid-row: 4/5;
 }
 
-.gallary img:nth-child(9) {
+.gallary a:nth-child(9) {
   grid-column: 2/3;
   grid-row: 4/5;
 }
 
-.gallary img:nth-child(10) {
+.gallary a:nth-child(10) {
   grid-column: 3/5;
   grid-row: 4/5;
+}
+
+/* media Gallary */
+/* media Gallary 700px */
+@media screen and (max-width: 700px) {
+  .gallary {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 200px);
+    gap: 15px;
+    padding: 0 20px 20px;
+  }
+
+  .gallary img {
+    height: 200px;
+    border-radius: 7px;
+  }
+
+  .gallary img:hover {
+    border-radius: 20px;
+  }
+
+  .gallary a:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .gallary a:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .gallary a:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .gallary a:nth-child(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .gallary a:nth-child(5) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .gallary a:nth-child(6) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+
+  .gallary a:nth-child(7) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .gallary a:nth-child(8) {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+
+  .gallary a:nth-child(9) {
+    grid-column: 1/2;
+    grid-row: 5/6;
+  }
+
+  .gallary a:nth-child(10) {
+    grid-column: 2/3;
+    grid-row: 5/6;
+  }
+}
+
+/* media Gallary 450px */
+@media screen and (max-width: 450px) {
+  .gallary {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(10, 200px);
+  }
+
+  .gallary a:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .gallary a:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .gallary a:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .gallary a:nth-child(4) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .gallary a:nth-child(5) {
+    grid-column: 1/2;
+    grid-row: 5/6;
+  }
+
+  .gallary a:nth-child(6) {
+    grid-column: 1/2;
+    grid-row: 6/7;
+  }
+
+  .gallary a:nth-child(7) {
+    grid-column: 1/2;
+    grid-row: 7/8;
+  }
+
+  .gallary a:nth-child(8) {
+    grid-column: 1/2;
+    grid-row: 8/9;
+  }
+
+  .gallary a:nth-child(9) {
+    grid-column: 1/2;
+    grid-row: 9/10;
+  }
+
+  .gallary a:nth-child(10) {
+    grid-column: 1/2;
+    grid-row:10/11;
+  }
 }
